# wasm-blitz

./: .gitignore  Cargo.toml  README.md  goals.md  package.json
crates/blitz-aarch64/: Cargo.toml
crates/blitz-aarch64/src/: lib.rs
crates/blitz-c/: Cargo.toml
crates/blitz-c/src/: lib.rs
crates/blitz-common/: Cargo.toml
crates/blitz-common/src/: asm.rs  dce.rs  lib.rs  ops.rs  passes.rs
crates/blitz-i4/: Cargo.toml
crates/blitz-i4/src/: lib.rs
crates/blitz-js/: Cargo.toml
crates/blitz-js/src/: lib.rs
crates/blitz-jvm/: Cargo.toml
crates/blitz-opt/: Cargo.toml
crates/blitz-opt/src/: lib.rs
crates/blitz-ppc64/: Cargo.toml
crates/blitz-ppc64/src/: lib.rs
crates/blitz-reencode/: Cargo.toml
crates/blitz-reencode/src/: lib.rs  tracker.rs
crates/blitz-riscv64/: Cargo.toml
crates/blitz-riscv64/src/: lib.rs  naive.rs
crates/blitz-tests/: Cargo.toml
crates/blitz-tests/tests/: e2e.rs
crates/blitz-x86-64/: Cargo.toml
crates/blitz-x86-64-fast/: Cargo.toml
crates/blitz-x86-64-fast/src/: lib.rs
crates/blitz-x86-64/src/: fast.rs  lib.rs  naive.rs  nieve.rs  out.rs  reg.rs
