[workspace]
members = ["crates/blitz-aarch64","crates/blitz-common", "crates/blitz-i4", "crates/blitz-js", "crates/blitz-ppc64", "crates/blitz-riscv64", "crates/blitz-x86-64"]
resolver = "3"

[workspace.package]
license = "MPL-2.0"
description = "Fast WASM compiler"

[workspace.dependencies]
wasmparser = { version = "0.239.0", default-features = false }
wasm-encoder = { version = "0.239.0", default-features = false,features = ["wasmparser"] }
typeid = "1.0.3"
