[workspace]
members = ["crates/blitz-aarch64","crates/blitz-common", "crates/blitz-i4", "crates/blitz-js", "crates/blitz-jvm", "crates/blitz-opt", "crates/blitz-ppc64", "crates/blitz-reencode", "crates/blitz-riscv64", "crates/blitz-x86-64", "crates/blitz-x86-64-fast"]
resolver = "3"

[workspace.package]
license = "MPL-2.0"
description = "Fast WASM compiler"

[workspace.dependencies]
wasmparser = { version = "0.240.0", default-features = false }
wasm-encoder = { version = "0.240.0", default-features = false,features = ["wasmparser"] }

wax-core = {version = "0.1.0",git = "https://github.com/portal-co/wax.git",branch = "main"}

portal-solutions-blitz-common = { version = "0.1.0", path = "crates/blitz-common", default-features = false }
portal-solutions-blitz-i4 = { version = "0.1.0", path = "crates/blitz-i4" }
portal-pc-asm-common = {version = "0.1.1",git = "https://github.com/portal-co/asm-common.git"}
portal-solutions-asm-x86-64 = {version = "0.1.0",git = "https://github.com/portal-co/asm-arch.git"}
portal-solutions-asm-riscv64 = {version = "0.1.0",git = "https://github.com/portal-co/asm-arch.git"}
portal-solutions-asm-jvm = {version = "0.1.0",git = "https://github.com/portal-co/asm-arch.git"}
portal-solutions-asm-regalloc = { git = "https://github.com/portal-co/asm-arch", package = "portal-solutions-asm-regalloc" }
typeid = "1.0.3"
