[package]
name = "portal-solutions-blitz-common"
version = "0.1.0"
edition = "2024"
license.workspace = true
description.workspace = true

[dependencies]
typeid.workspace = true
wasmparser.workspace = true
portal-pc-asm-common = {workspace = true,features = ["alloc"]}

[features]
asm=[]
default=["asm"]