[package]
name = "portal-solutions-blitz-riscv64"
version = "0.1.0"
edition = "2024"
license.workspace = true
description.workspace = true

[dependencies]
portal-solutions-blitz-common = { version = "0.1.0", path = "../blitz-common" }
portal-solutions-blitz-i4 = { version = "0.1.0", path = "../blitz-i4" }
