[package]
name = "portal-solutions-blitz-riscv64"
version = "0.1.0"
edition = "2024"
license.workspace = true
description.workspace = true

[dependencies]
portal-solutions-blitz-common = { workspace = true, features = ["asm"] }
portal-pc-asm-common = { workspace = true }

portal-solutions-blitz-i4.workspace = true
portal-solutions-asm-riscv64 = { workspace = true, features = ["regalloc-integration"] }
portal-solutions-asm-regalloc.workspace = true
